eycart-deploy.yaml
apiVersion:  apps/v1
kind:  Deployment
metadata:
  name: eycart-deployment
  namespace:  iyas-ns
  labels:
    app:  eycart-deployment
spec:
  replicas:  3
  strategy:
    type:  RollingUpdate
    rollingUpdate:
      maxSurge:  25%
      maxUnavailable:  25%
  selector:
    matchLabels:
      app:  eycart-app
  template:
     metadata:
       labels:
         app: eycart-app
     spec:
       containers:
         - name: eycart-container
           image:  muralisocial123/ey-cart:v1.1.0
           ports:
             - containerPort:  3000
           resources:
            requests:
              cpu:  "100m"
              memory:  "128Mi"
            limits:
              cpu:  "350m"
              memory:  "256Mi"
---
apiVersion:  v1
kind:  Service
metadata:
  name:  eycart-service
  namespace:  iyas-ns
spec:
  selector:
    app:  eycart-app
  ports:
    - port:  3000
      targetPort: 3000
  type:  ClusterIP
