fit-deploy.yaml
apiVersion:  apps/v1
kind:  Deployment
metadata:  
  namespace:  iyas-ns
  name:  fitness-deployment 
spec:
  replicas:  3
  strategy:
    type:  RollingUpdate
    rollingUpdate:
      maxUnavailable:  25%
      maxSurge:  25%
  selector:
    matchLabels:
      app:  fitness-app
  template:
    metadata:
      labels:
        app:  fitness-app
    spec:
      containers:
        - name:  fitness-container 
          image:  muralisocial123/fitness-app:v1.0.1
          resources:
            requests:
              cpu:  "100m"
              memory:  "128Mi"
            limits:
              cpu:  "350m"
              memory:  "256Mi"
            
          ports:
            - containerPort:  5000
---
apiVersion:  v1
kind:  Service
metadata:
  name:  fitness-service
  namespace:  iyas-ns
spec:
  selector:
    app:  fitness-app
  ports:
    - port:  5000
      targetPort:  5000
  type:  ClusterIP
