httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fitness-route
spec:
  parentRefs:
  - name: iyas-gateway

  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /fitness
      backendRefs:
      - name: fitness-tracker-service
        port: 80
    - matches:
      - path:
          type:  PathPrefix
          value:  /hospital
      backendRefs:
        - name:  hospital-service
          port:  80
